# hone

./: .gitignore  Cargo.toml  README.md
examples/: pytorch-mnist.sh  quadratic-problem.py  simple.sh
src/: attr.rs  best.rs  commands.rs  config.rs  domain.rs  envvar.rs  error.rs  event.rs  get.rs  history.rs  hp.rs  init.rs  json.rs  lib.rs  main.rs  metric.rs  obs.rs  observe.rs  optimizer.rs  param.rs  pubsub.rs  report.rs  rng.rs  rpc.rs  run.rs  runner.rs  samplers.rs  str.rs  studies.rs  study.rs  tell.rs  trial.rs  trials.rs  tuners.rs  types.rs
src/commands/: ask.rs  get.rs  optim.rs  run.rs  show.rs  tell.rs  tuner.rs
src/optimizer/: domain.rs  optimizers.rs  random.rs  space.rs
src/optimizer/optimizers/: random.rs
src/runner/: command.rs  loader.rs  tempdir.rs
src/tuners/: random.rs  retry.rs
