[package]
name = "hone"
version = "0.0.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "A shell-friendly parameter search tool inspired by Optuna"
homepage = "https://github.com/sile/hone"
repository = "https://github.com/sile/hone"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytecodec = { version = "0.4", features = ["bincode_codec"] }
fibers = "0.1"
fibers_global = "0.1"
fibers_rpc = "0.3"
futures = "0.1"
ordered-float = "2"
rand = "0.7"
serde = { version="1", features=["derive"] }
serde_json = "1"
structopt = "0.3"
thiserror = "1"
tpe = "0.1"
uuid = { version="0.8", features=["serde", "v4"] }
